# Markov-Model

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test.py
datasets/: ap_monkey.txt
logs/: log_14_06_24.txt  log_15_06_24.txt
src/: markov.py
