[project]
name = "StudentScientificResearch"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emil G.", email = "gabdulvaleev.emil@mail.ru"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
